@@ -227,7 +227,8 @@ you will not be able to use anything provided by the GUI Environment, including 
 //! Define _IRR_WCHAR_FILESYSTEM to enable unicode filesystem support for the engine.
 /** This enables the engine to read/write from unicode filesystem. If you
 disable this feature, the engine behave as before (ansi). This is currently only supported
-for Windows based systems. */
+for Windows based systems. You also have to set #define UNICODE for this to compile.
+*/
 //#define _IRR_WCHAR_FILESYSTEM
 #ifdef NO_IRR_WCHAR_FILESYSTEM
 #undef _IRR_WCHAR_FILESYSTEM
