@@ -458,7 +458,7 @@ bool CFileSystem::removeFileArchive(u32 index)
 //! removes an archive from the file system.
 bool CFileSystem::removeFileArchive(const io::path& filename)
 {
-	const path absPath = getAbsolutePath(filename);	
+	const path absPath = getAbsolutePath(filename);
 	for (u32 i=0; i < FileArchives.size(); ++i)
 	{
 		if (absPath == FileArchives[i]->getFileList()->getPath())
@@ -593,7 +593,11 @@ bool CFileSystem::changeWorkingDirectoryTo(const io::path& newDirectory)
 		success = (_chdir(newDirectory.c_str()) == 0);
 	#endif
 #else
-		success = (chdir(newDirectory.c_str()) == 0);
+    #if defined(_IRR_WCHAR_FILESYSTEM)
+		success = (_wchdir(newDirectory.c_str()) == 0);
+    #else
+        success = (chdir(newDirectory.c_str()) == 0);
+    #endif
 #endif
 	}
 
@@ -777,7 +781,7 @@ path CFileSystem::getRelativeFilename(const path& filename, const path& director
 	#endif
 
 
-	for (; i<list1.size() && i<list2.size() 
+	for (; i<list1.size() && i<list2.size()
 #if defined (_IRR_WINDOWS_API_)
 		&& (io::path(*it1).make_lower()==io::path(*it2).make_lower())
 #else
@@ -969,13 +973,17 @@ bool CFileSystem::existFile(const io::path& filename) const
 #else
 	_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 #if defined(_MSC_VER)
-#if defined(_IRR_WCHAR_FILESYSTEM)
-	return (_waccess(filename.c_str(), 0) != -1);
-#else
-	return (_access(filename.c_str(), 0) != -1);
-#endif
+    #if defined(_IRR_WCHAR_FILESYSTEM)
+        return (_waccess(filename.c_str(), 0) != -1);
+    #else
+        return (_access(filename.c_str(), 0) != -1);
+    #endif
 #elif defined(F_OK)
-	return (access(filename.c_str(), F_OK) != -1);
+    #if defined(_IRR_WCHAR_FILESYSTEM)
+        return (_waccess(filename.c_str(), F_OK) != -1);
+    #else
+        return (access(filename.c_str(), F_OK) != -1);
+	#endif
 #else
     return (access(filename.c_str(), 0) != -1);
 #endif
